undo postgres openapi.yml and bring functionality to new controllers.
